--- a/example/webgl2fundamentals/11.less-code-more-fun/11.1.less-code-more-fun/index.html
+++ b/example/webgl2fundamentals/11.less-code-more-fun/11.1.less-code-more-fun/index.html
@@ -6,14 +6,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://webgl2fundamentals.org/webgl/resources/webgl-tutorials.css">
+  <style>
+    body {
+      margin: 0;
+    }
+
+    canvas {
+      width: 100vw;
+      height: 100vh;
+      display: block;
+    }
+  </style>
 </head>
 
 <body>
+  <canvas id="canvas"></canvas>
 
   <script src="https://webgl2fundamentals.org/webgl/resources/twgl-full.min.js"></script>
   <script src="https://webgl2fundamentals.org/webgl/resources/m4.js"></script>
   <script src="https://webgl2fundamentals.org/webgl/resources/texture-utils.js"></script>
   <script src="https://webgl2fundamentals.org/webgl/resources/chroma.min.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
