--- a/example/webgl2fundamentals/08.3d-orthographic/8.11.3d-camera/index.html
+++ b/example/webgl2fundamentals/08.3d-orthographic/8.11.3d-camera/index.html
@@ -71,7 +71,7 @@
   <script src="../../utils/webgl-utils.js"></script>
   <script src="../../utils/webgl-lessons-ui.js"></script>
   <script src="../../utils/Matrix4.js"></script>
-  <script src="8.10.3d-camera.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
