--- a/example/webgl2fundamentals/10.3d-lighting-directional/10.3.lighting-point/index.html
+++ b/example/webgl2fundamentals/10.3d-lighting-directional/10.3.lighting-point/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>点光源</title>
   <link rel="stylesheet" href="https://webgl2fundamentals.org/webgl/resources/webgl-tutorials.css">
   <style>
     body {
@@ -29,7 +29,7 @@
   </div>
   <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
   <script src="https://webgl2fundamentals.org/webgl/resources/webgl-lessons-ui.js"></script>
-  <script src="https://webgl2fundamentals.org/webgl/resources/m4.js"></script>
+  <script src="../../utils/Matrix4.js"></script>
   <script src="index.js"></script>
 </body>
 
