--- a/example/webgl2fundamentals/13.drawing-multiple-things/13.1.drawing-multiple-things/index.html
+++ b/example/webgl2fundamentals/13.drawing-multiple-things/13.1.drawing-multiple-things/index.html
@@ -24,6 +24,7 @@
   <canvas id="canvas"></canvas>
 
   <script src="../../utils/twgl-full.js"></script>
+  <script src="../../utils/flattened-primitives.js"></script>
   <script src="https://webgl2fundamentals.org/webgl/resources/m4.js"></script>
   <script src="https://webgl2fundamentals.org/webgl/resources/texture-utils.js"></script>
   <script src="https://webgl2fundamentals.org/webgl/resources/chroma.min.js"></script>
