--- a/example/webgl2fundamentals/06.texture/6.1.texture/index.html
+++ b/example/webgl2fundamentals/06.texture/6.1.texture/index.html
@@ -24,7 +24,7 @@
 <body>
   <canvas id="canvas"></canvas>
   <script type="x-shader/x-vertex" id="J_vertexShader">#version 300 es
-    in vec2 a_position;
+    in vec4 a_position;
     in vec2 a_texCoord;
 
     uniform mat4 u_matrix;
@@ -64,8 +64,8 @@
   </script>
   <script src="../../utils/webgl-utils.js"></script>
   <script src="../../utils/webgl-lessons-ui.js"></script>
-  <script src="../../utils/m3.js"></script>
-  <script src="6.1.texture.js"></script>
+  <script src="../../utils/m4.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
